--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,18 @@
-/* CSS declarations go here */
+.messenger {
+    display: flex;
+    flex-direction: row;
+}
+
+.message {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.message img {
+    display: none;
+}
+
+.message .text {
+    margin-left: 8px;
+}
