--- a/imports/stylesheets/pages/join/_main.scss
+++ b/imports/stylesheets/pages/join/_main.scss
@@ -26,7 +26,7 @@ main{
       margin-bottom: 0;
     }
     input[type="checkbox"] + label {
-      background: url(../img/checkbox.png) 0 -1px no-repeat;
+      background: url(/images/checkbox.png) 0 -1px no-repeat;
       padding-left: 25px;
     }
     input[type="checkbox"]:checked + label {
