--- a/imports/stylesheets/pages/join/_media.scss
+++ b/imports/stylesheets/pages/join/_media.scss
@@ -7,7 +7,7 @@
   }
   main {
     position: relative;
-    background: url(../img/join-back-cover.png);
+    background: url(/images/join-back-cover.png);
     .container{
       display: flex;
       flex-flow: column;
