--- a/imports/stylesheets/pages/main/includes/_menu.scss
+++ b/imports/stylesheets/pages/main/includes/_menu.scss
@@ -2,7 +2,7 @@ $icon-width: 75px;
 $icon-offset: 3.5px;
 .menu{
   position: relative;
-  background: url(../img/menu.png) no-repeat;
+  background: url(/images/menu.png) no-repeat;
   display: inline-block;
   width: $icon-width;
   height: 83px;
