--- a/imports/stylesheets/pages/main/includes/_news.scss
+++ b/imports/stylesheets/pages/main/includes/_news.scss
@@ -19,7 +19,7 @@
       position: relative;
       border-radius: 5px;
       overflow: hidden;
-      background: url(../img/news.png) no-repeat;
+      background: url(/images/news.png) no-repeat;
       > span{
         color: #ffffff;
         font-size: 10px;
