--- a/imports/stylesheets/pages/main/_photoalbum.scss
+++ b/imports/stylesheets/pages/main/_photoalbum.scss
@@ -21,7 +21,7 @@
         background-position: center;
         &:before{
           content: '';
-          background-image: url(../img/iconpack.png);
+          background-image: url(/images/iconpack.png);
           background-repeat: no-repeat;
           display: inline-block;
           @include sprite(-652px, -3px, 35px, 31px);
