+ open message in dialog

--- a/imports/stylesheets/join.scss
+++ b/imports/stylesheets/join.scss
@@ -1,6 +1,7 @@
 @import "includes/mixins";
 @import "includes/variables";
 @import "includes/typography";
+@import "common";
 
 // Styles
 #login-page {
