--- a/imports/stylesheets/pages/main/_main.scss
+++ b/imports/stylesheets/pages/main/_main.scss
@@ -1,57 +1,59 @@
 $post-footer-text-color: #cad3df;
 $slider-size: 16px;
-.wrap{
+.wrap {
   background: #fff;
 }
-.h100{
+
+.h100 {
   height: calc(100vh - 253px);
 }
+
 $user-menu-height: 55px;
 $user-menu-background: #eceff4;
 $user-menu-border-radius: 5px;
 $user-menu-border-color: #ddddde;
 
-main{
-  margin-top: -220px;
-  .user-block{
+main {
+  //margin-top: -220px;
+  .user-block {
     padding: 0 40px;
   }
-  .wrapper{
+  .wrapper {
     background: #fff;
     box-sizing: border-box;
     box-shadow: 0 0 0 1px #dcdcdc;
     padding: 10px;
   }
-  .user-container{
+  .user-container {
     border-top: 1px solid #ccc;
   }
-  .user-info{
+  .user-info {
     margin-top: 20px;
     min-height: 100px;
     font-family: "Panton-Regular";
     color: #ffffff;
-    h4{
-      font-size:24px;
+    h4 {
+      font-size: 24px;
       margin-top: 10px;
       margin-bottom: 0;
     }
-    div > div{
+    div > div {
       font-size: 14px;
       color: #fff;
       margin-bottom: 10px;
       opacity: .65;
     }
-    span{
+    span {
       margin-right: 5px;
       position: relative;
       top: 3px;
     }
-    p{
+    p {
       font-size: 12px;
       margin-bottom: 20px;
     }
   }
-  .user-warning{
+  .user-warning {
     width: 95%;
     color: rgb(255, 153, 72);
     font-family: "Panton-Regular";
@@ -61,20 +63,20 @@ main{
     background-color: rgb(255, 240, 228);
     border: 1px solid rgb(255, 153, 72);
     border-radius: 5px;
-    span{
+    span {
       position: relative;
       top: 6px;
       margin-right: 10px;
     }
   }
 
-  .friends{
+  .friends {
     display: flex;
     height: 100px;
     justify-content: space-between;
     padding-top: 20px;
     padding-bottom: 10px;
-    .friend{
+    .friend {
       width: 23%;
       height: $user-menu-height;
       background-color: $user-menu-background;
@@ -87,12 +89,12 @@ main{
       text-align: center;
       line-height: 52px;
       padding-right: 3px;
-      &.count{
+      &.count {
         border: 1px solid $user-menu-border-color;
       }
     }
   }
-  .subscribers{
+  .subscribers {
     background-color: $user-menu-background;
     border-radius: $user-menu-border-radius;
     border: 1px solid $user-menu-border-color;
@@ -106,11 +108,11 @@ main{
     a {
       color: #656a6e;
       text-decoration: underline;
-      &:hover{
+      &:hover {
         color: lighten(#656a6e, 10%);
       }
     }
-    .last-subscribers{
+    .last-subscribers {
       margin-top: 5px;
       display: flex;
       justify-content: space-between;
@@ -122,7 +124,7 @@ main{
       }
     }
   }
-  .add-friend{
+  .add-friend {
     margin: 20px 0;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
     color: white;
@@ -137,14 +139,14 @@ main{
     border-radius: 2px;
     box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.25), inset 0 0 2px rgba(0, 0, 0, 0.1);
     outline: none;
-    &:hover{
+    &:hover {
       background-image: linear-gradient(to top, transparent 0%, rgba(255, 255, 255, 0.5) 100%);
     }
-    &:active{
+    &:active {
       background-image: none;
     }
   }
-  .add-group{
+  .add-group {
     margin: 20px 0;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
     color: white;
@@ -160,20 +162,20 @@ main{
     box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.25), inset 0 0 2px rgba(0, 0, 0, 0.1);
     outline: none;
 
-    &:hover{
+    &:hover {
       background-image: linear-gradient(to top, transparent 0%, rgba(255, 255, 255, 0.5) 100%);
     }
-    &:active{
+    &:active {
       background-image: none;
     }
   }
 
-
   @import "photoalbum";
 }
-.posts{
+
+.posts {
   margin-bottom: 120px;
-  article{
+  article {
     font-family: "Panton-Regular";
     display: table;
     table-layout: fixed;
@@ -188,9 +190,9 @@ main{
         font-size: 12px;
         color: #999999;
       }
-      .content-head{
+      .content-head {
         position: relative;
-        > h3{
+        > h3 {
           margin: 0;
           color: #656a6e;
           font-size: 16px;
@@ -200,7 +202,7 @@ main{
             padding-left: 5px;
           }
         }
-        > span{
+        > span {
           color: #a4a4a4;
           font-size: 20px;
           letter-spacing: -1px;
@@ -213,23 +215,21 @@ main{
     }
   }
 
-
-
-  .posted-by{
+  .posted-by {
     width: 80px;
     display: table-cell;
-    .poster-border{
+    .poster-border {
       padding-bottom: 5px;
       border-bottom: 1px solid #e0e0e0;
     }
-    img{
+    img {
       padding: 5px;
     }
-    .poster-wrapper{
+    .poster-wrapper {
       padding: 5px;
       background: #eceff4;
     }
-    time{
+    time {
       display: block;
       text-align: center;
       font-size: 12px;
@@ -237,29 +237,31 @@ main{
     }
   }
 }
-.comments{
+
+.comments {
   border-top: 1px solid #ccc;
   margin-top: 15px;
   .posted-by {
-    > img{
+    > img {
       padding: 15px;
     }
   }
-  .posts{
+  .posts {
     margin-bottom: 15px;
   }
-  article{
-    &:nth-child(even){
-      .post-content{
+  article {
+    &:nth-child(even) {
+      .post-content {
         background: #eceff4;
       }
     }
   }
 }
-.message-block{
+
+.message-block {
   position: relative;
   display: block;
-  label{
+  label {
     height: 50px;
     width: 80px;
     text-align: center;
@@ -270,7 +272,7 @@ main{
     margin-bottom: 0;
     cursor: pointer;
   }
-  textarea{
+  textarea {
     overflow: hidden;
     resize: none;
     outline: none;
@@ -282,14 +284,14 @@ main{
     font-size: 13px;
   }
 
-  .controls{
+  .controls {
     text-align: right;
     width: 80px;
     position: absolute;
     right: 0;
     bottom: 15px;
   }
-  .send{
+  .send {
     display: inline-block;
     background: #3892cd;
     @include size(35px);
@@ -298,12 +300,12 @@ main{
     line-height: 40px;
     cursor: pointer;
     border: none;
-    .icon{
+    .icon {
       position: relative;
       left: 2px;
     }
   }
-  .emoji{
+  .emoji {
     display: inline-block;
     @include size(35px);
     text-align: center;
@@ -311,7 +313,8 @@ main{
     cursor: pointer;
   }
 }
-.connect-menu{
+
+.connect-menu {
   height: $user-menu-height;
   background-color: $user-menu-background;
   border-radius: $user-menu-border-radius;
@@ -319,20 +322,21 @@ main{
   display: flex;
   overflow: hidden;
   margin-bottom: 20px;
-  a{
+  a {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    &:nth-child(even){
+    &:nth-child(even) {
       border-right: 1px solid $user-menu-border-color;
       border-left: 1px solid $user-menu-border-color;
 
     }
   }
 }
-.article-footer, .content-footer{
+
+.article-footer, .content-footer {
   color: #98a4b5;;
   text-align: right;
   position: relative;
@@ -340,7 +344,7 @@ main{
     display: inline-block;
     margin-left: 10px;
   }
-  .people-likes{
+  .people-likes {
     $background: #eceff4;
     $border: #dcdcdc;
     display: none;
@@ -360,14 +364,14 @@ main{
       margin: 2px;
       cursor: pointer;
     }
-    > span{
+    > span {
       color: #999999;
       font-size: 12px;
       line-height: 28px;
       padding-left: 5px;
       padding-right: 2px;
     }
-    &:after, &:before{
+    &:after, &:before {
       content: '';
       display: block;
       position: absolute;
@@ -375,14 +379,14 @@ main{
       width: 0;
       height: 0;
     }
-    &:after{
+    &:after {
       border-left: 15px solid transparent;
       border-right: 15px solid transparent;
       border-top: 16px solid $background;
       bottom: -16px;
       left: 165px;
     }
-    &:before{
+    &:before {
       border-left: 16px solid transparent;
       border-right: 16px solid transparent;
       border-top: 17px solid $border;
@@ -392,6 +396,7 @@ main{
 
   }
 }
+
 .switch {
 
   position: relative;
@@ -401,7 +406,7 @@ main{
   width: 36px;
   height: 20px;
   input {
-    display:none;
+    display: none;
     &:checked + .slider {
       background-color: darken($post-footer-text-color, 10%);
     }
@@ -414,6 +419,7 @@ main{
     }
   }
 }
+
 .slider {
   position: absolute;
   cursor: pointer;
@@ -435,7 +441,8 @@ main{
     transition: .4s;
   }
 }
-.switch-dislike{
+
+.switch-dislike {
   position: relative;
   top: 6px;
   display: inline-block;
@@ -443,7 +450,7 @@ main{
   height: 20px;
   background-color: $post-footer-text-color;
   border-radius: 34px;
-  input{
+  input {
     display: inline-block;
     height: 20px;
     width: 16px;
@@ -451,7 +458,7 @@ main{
     cursor: pointer;
     opacity: 0;
   }
-  .slider-dislike{
+  .slider-dislike {
     background: #fff url(/images/iconpack.png) no-repeat;
     border-radius: 50%;
     position: absolute;
@@ -459,19 +466,20 @@ main{
     left: 2px;
     transition: transform .2s;
   }
-  .none:checked ~ .slider-dislike{
+  .none:checked ~ .slider-dislike {
     @include sprite(-597px, 0, $slider-size, $slider-size);
     transform: translateX(17px);
   }
-  .liked:checked ~ .slider-dislike{
+  .liked:checked ~ .slider-dislike {
     @include sprite(-615px, 0, $slider-size, $slider-size);
     transform: translateX(35px);
   }
-  .disliked:checked ~ .slider-dislike{
+  .disliked:checked ~ .slider-dislike {
     @include sprite(-491px, 0, $slider-size, $slider-size);
   }
 }
-.switch-friends{
+
+.switch-friends {
   position: relative;
   top: 6px;
   display: inline-block;
@@ -479,7 +487,7 @@ main{
   height: 20px;
   background-color: $post-footer-text-color;
   border-radius: 34px;
-  input{
+  input {
     display: inline-block;
     height: 20px;
     width: 16px;
@@ -487,7 +495,7 @@ main{
     cursor: pointer;
     opacity: 0;
   }
-  .slider-dislike{
+  .slider-dislike {
     background: #fff;
     border-radius: 50%;
     border: 2px solid #fff;
@@ -497,17 +505,17 @@ main{
     transition: transform .2s;
     @include size($slider-size);
   }
-  .none:checked ~ .slider-dislike{
+  .none:checked ~ .slider-dislike {
     transform: translateX(17px);
   }
-  .liked:checked ~ .slider-dislike{
+  .liked:checked ~ .slider-dislike {
     background: #25aae1;
     transform: translateX(35px);
   }
-  .disliked:checked ~ .slider-dislike{
+  .disliked:checked ~ .slider-dislike {
     background: #f2295f;
   }
-  .minus, .plus{
+  .minus, .plus {
     display: inline-block;
     @include size(24px);
     border-radius: 5px;
@@ -522,38 +530,40 @@ main{
     padding: 0;
     cursor: pointer;
   }
-  .minus{
+  .minus {
     background: #25aae1;
     left: -28px;
   }
-  .plus{
+  .plus {
     background: #f2295f;
     right: -28px;
   }
 }
-.comment{
+
+.comment {
   font-size: 12px;
   cursor: pointer;
-  .icon{
+  .icon {
     position: relative;
     top: 3px;
   }
-  .comment-text{
+  .comment-text {
     text-decoration: underline;
     padding-left: 3px;
   }
-  &:hover{
-    .comment-text{
+  &:hover {
+    .comment-text {
       color: darken($post-footer-text-color, 10%);
     }
   }
 }
-.repost{
+
+.repost {
   cursor: pointer;
   font-family: "Panton-Bold";
   font-size: 12px;
   font-style: italic;
-  .icon{
+  .icon {
     position: relative;
     top: 3px;
   }
