--- a/imports/stylesheets/pages/main/includes/_messenger.scss
+++ b/imports/stylesheets/pages/main/includes/_messenger.scss
@@ -1,16 +1,17 @@
-#messenger-content{
+#messenger-content {
   height: 100vh;
   margin-right: auto;
   margin-left: auto;
   max-width: 1100px;
   position: relative;
 }
-#messenger{
+
+#messenger {
   height: 100vh;
   .mCSB_scrollTools {
     right: -8px;
   }
-  .messenger-container{
+  .messenger-container {
     display: table;
     min-width: 100%;
     width: 100%;
@@ -18,7 +19,7 @@
     table-layout: fixed;
     position: relative;
     padding-bottom: 120px;
-    &:after{
+    &:after {
       content: "";
       display: block;
       position: absolute;
@@ -26,9 +27,9 @@
       right: 0;
       top: 0;
       height: 10px;
-      background: linear-gradient(to bottom, #fff 0%, rgba(255,255,255,0) 100%);
+      background: linear-gradient(to bottom, #fff 0%, rgba(255, 255, 255, 0) 100%);
     }
-    .online{
+    .online {
       position: relative;
       left: 3px;
       display: inline-block;
@@ -36,19 +37,19 @@
       background-color: #8dc63f;
       @include size(10px);
     }
-    .dialogs{
+    .dialogs {
       display: table-cell;
       width: 33%;
       position: relative;
       .wrap-many {
         display: flex;
         flex-flow: row wrap;
-        img{
+        img {
           width: 50%;
           height: 50%;
         }
       }
-      > ul{
+      > ul {
         position: absolute;
         top: 0;
         left: 0;
@@ -56,23 +57,23 @@
         margin: 0;
         padding: 0;
         border: 1px solid #d9d9d9;
-        li{
+        li {
           list-style: none;
           padding-left: 15px;
           overflow: hidden;
           border-top: 1px solid #d9d9d9;
-          &:hover{
+          &:hover {
             background-color: #eceff4;
-            a .icon{
+            a .icon {
               display: inline-block;
             }
           }
-          .photo{
+          .photo {
             width: 55px;
             float: left;
             margin: 10px 0;
             position: relative;
-            .count{
+            .count {
               background: #0084ff;
               border-radius: 5px;
               font-family: "Panton-Regular";
@@ -84,29 +85,29 @@
               padding: 0px 5px;
             }
           }
-          .content{
+          .content {
             display: block;
             overflow: hidden;
             position: relative;
             text-decoration: none;
             padding: 15px 0 0 5px;
-            .name{
+            .name {
               color: #656a6e;
               font-size: 14px;
               font-family: "Panton-Regular";
             }
-            .last{
+            .last {
               color: #999999;
               font-size: 12px;
               font-family: "Panton-Regular";
             }
-            .icon{
+            .icon {
               display: none;
               position: absolute;
               right: 5px;
               top: 5px;
             }
-            .date{
+            .date {
               font-family: "Panton-Regular";
               font-size: 10px;
               color: #999999;
@@ -118,11 +119,13 @@
         }
       }
     }
-    .messages{
+    .messages {
       display: table-cell;
       width: 67%;
       position: relative;
-      > ul{
+      > ul {
+        display: flex;
+        flex-direction: column-reverse;
         position: absolute;
         top: 0;
         left: 0;
@@ -130,29 +133,22 @@
         margin: 0;
         padding: 0;
         border-bottom: 1px solid #d9d9d9;
-        li{
+        li {
           list-style: none;
         }
       }
 
-
-      .message-container{
+      .message-container {
         width: 100%;
         max-width: 100%;
         position: relative;
-        padding: 10px;
         cursor: pointer;
-        &:after{
-          content: "";
-          display: table;
-          height: 1px;
-          width: 100%;
-        }
+        padding: 1px;
         @include user-select();
         > div {
           cursor: auto;
         }
-        .options{
+        .options {
           display: none;
           $background: #aaacad;
           background-color: $background;
@@ -173,44 +169,46 @@
             left: 50%;
             margin-left: -6px;
           }
-          .icon + .icon{
+          .icon + .icon {
             margin-left: 5px;
             position: relative;
             top: 1px;
           }
         }
-        &:hover{
+        &:hover {
           background-color: lighten(#eceff4, 3%);
-          .chbox{
+          .chbox {
             display: block;
-            label{
+            label {
               opacity: 0.5;
             }
 
           }
         }
-        .message{
+        .message {
           width: 50%;
           display: flex;
           position: relative;
           float: right;
-          .avatar{
+          padding: 2px 6px 4px 6px;
+          .avatar {
             min-width: 55px;
             width: 55px;
             order: 3;
           }
-          .text{
+          .text {
+            flex: 1;
             order: 2;
             background-color: #4aa1d9;
             border-radius: 5px;
             position: relative;
-            margin-right: 15px;
             color: #ffffff;
             font-family: "Panton-Regular";
             font-size: 12px;
-            padding: 15px;
+            padding: 16px;
+            margin: 12px 15px 0 0;
             @include user-select(text);
-            &:after{
+            &:after {
               content: "";
               width: 0;
               height: 0;
@@ -222,7 +220,7 @@
               border-left: 10px solid #4aa1d9;
             }
           }
-          .time{
+          .time {
             order: 1;
             position: absolute;
             align-self: center;
@@ -232,26 +230,26 @@
             right: 103%;
           }
         }
-        &.active{
+        &.active {
           background-color: #eceff4;
-          .chbox{
+          .chbox {
             display: block;
           }
         }
-        &.left{
-          .message{
+        &.left {
+          .message {
             float: left;
           }
-          .avatar{
+          .avatar {
             order: 1;
           }
-          .text{
+          .text {
             order: 2;
             background-color: #eceff4;
             margin-right: 0;
             margin-left: 15px;
             color: #999999;
-            &:after{
+            &:after {
               right: auto;
               left: -10px;
               top: 10px;
@@ -259,26 +257,26 @@
               border-right: 10px solid #eceff4;
             }
           }
-          .time{
+          .time {
             order: 3;
             right: auto;
             left: 103%;
           }
-          .chbox{
+          .chbox {
             right: 10px;
           }
-          .options{
+          .options {
             left: 2px;
             right: auto;
           }
-          &.active{
-            .text{
+          &.active {
+            .text {
               background-color: #fff;
             }
           }
         }
       }
-      .chbox{
+      .chbox {
         display: none;
         @include user-select(none);
         position: absolute;
@@ -288,7 +286,7 @@
           position: absolute;
           left: -9999px;
         }
-        label{
+        label {
           cursor: pointer;
           font-weight: normal;
           margin-bottom: 0;
@@ -303,23 +301,23 @@
         }
       }
     }
-    .dialogs, .messages{
+    .dialogs, .messages {
       padding: 10px 0;
-      > ul{
+      > ul {
         bottom: 90px;
         overflow: hidden;
       }
     }
-    .find{
+    .find {
       position: absolute;
       bottom: 45px;
       width: 100%;
-      span{
+      span {
         background-color: #e0e0e0;
         border: none;
         border-radius: 0;
       }
-      input{
+      input {
         font-family: "Panton-Regular";
         font-size: 13px;
         background: #eceff4;
@@ -327,7 +325,7 @@
         outline: none;
         border-radius: 0;
         height: 45px;
-        @include placeholder{
+        @include placeholder {
           color: #aaacad
         }
       }
@@ -337,8 +335,8 @@
       top: calc(100% - 90px);
       width: 98%;
       display: block;
-      max-height:90px;
-      .add{
+      max-height: 90px;
+      .add {
         display: inline-block;
         height: 35px;
         width: 35px;
@@ -346,37 +344,37 @@
         line-height: 40px;
         cursor: pointer;
       }
-      textarea{
+      textarea {
         width: 100%;
         margin: 15px 0 0;
         padding: 0 110px 0 60px;
       }
-      label{
+      label {
         bottom: 5px;
       }
-      .controls{
+      .controls {
         bottom: 10px;
         width: 115px;
       }
     }
-    .popover{
+    .popover {
       $bgc: #fff;
       opacity: 1;
       padding: 0;
       border: none;
       margin-top: -25px;
-      .arrow{
+      .arrow {
         border-top-color: #cad3df;
         bottom: -40px;
         border-width: 20px;
-        &:after{
+        &:after {
           border-top-color: #eceff4;
           bottom: -19px;
           margin-left: -20px;
           border-width: 20px;
         }
       }
-      .popover-content{
+      .popover-content {
         background-color: $bgc;
         max-width: 270px;
         width: 270px;
@@ -384,7 +382,7 @@
         border-radius: 5px;
         border: 1px solid #cad3df;
       }
-      .head{
+      .head {
         font-family: "Panton-Regular";
         font-size: 20px;
         color: #8493a8;
@@ -395,38 +393,38 @@
         position: relative;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
-        .icon{
+        .icon {
           position: absolute;
           right: 10px;
           top: 50%;
           transform: translateY(-50%);
           cursor: pointer;
         }
-        .popover{
+        .popover {
           margin-left: 15px;
-          .arrow{
+          .arrow {
             display: none;
           }
-          .popover-content{
+          .popover-content {
             max-width: 220px;
           }
-          ul{
+          ul {
             margin: 0;
             padding: 0;
-            li{
+            li {
               list-style: none;
               border-bottom: 1px solid #cad3df;
               padding: 0 30px;
-              &:last-child{
+              &:last-child {
                 border-bottom: none;
               }
-              &:hover{
+              &:hover {
                 background: #eceff4;
-                a{
+                a {
                   color: #0082d5;
                 }
               }
-              a{
+              a {
                 text-decoration: none;
                 font-family: "Panton-Regular";
                 font-size: 15px;
@@ -437,38 +435,38 @@
           }
         }
       }
-      .footer{
+      .footer {
         position: relative;
         bottom: 0;
         overflow: hidden;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
-        span{
+        span {
           background-color: #eceff4;
         }
-        input{
+        input {
           box-shadow: none;
           font-size: 15px;
-          @include placeholder{
+          @include placeholder {
             font-family: "Roboto-Light";
             font-size: 15px;
             color: #8493a8;
           }
         }
       }
-      .content{
+      .content {
         max-height: 420px;
         overflow: hidden;
-        .item{
+        .item {
           display: table;
           width: 100%;
-          .avatar{
+          .avatar {
             display: table-cell;
             width: 60px;
             padding: 10px;
             position: relative;
             display: inline-block;
-            .avatar-online{
+            .avatar-online {
               display: inline-block;
               border-radius: 50%;
               border: 2px solid #fff;
@@ -477,45 +475,45 @@
               right: 10px;
             }
           }
-          .name, .action{
+          .name, .action {
             display: table-cell;
             vertical-align: middle;
           }
-          .name{
+          .name {
             font-family: "Panton-Regular";
             font-size: 15px;
             color: #54657e;
           }
-          .action{
+          .action {
             width: 40px;
             text-align: center;
-            .icon{
+            .icon {
               display: none;
               cursor: pointer;
             }
           }
-          &.user-online{
-            .avatar-online{
+          &.user-online {
+            .avatar-online {
               background: #04be5b;
               height: 10px;
               width: 10px;
             }
           }
-          &.user-busy{
-            .avatar-online{
+          &.user-busy {
+            .avatar-online {
               background: #ff9948;
               height: 10px;
               width: 10px;
             }
           }
-          &.user-exists{
-            .avatar, .name{
+          &.user-exists {
+            .avatar, .name {
               opacity: .5;
             }
           }
-          &:hover{
-            .action{
-              .icon{
+          &:hover {
+            .action {
+              .icon {
                 display: inline-block;
               }
             }
