+ send message on enter

--- a/imports/stylesheets/pages/main/includes/_messenger.scss
+++ b/imports/stylesheets/pages/main/includes/_messenger.scss
@@ -192,7 +192,6 @@
           float: right;
           padding: 2px 6px 4px 6px;
           .avatar {
-            min-width: 55px;
             width: 55px;
             order: 3;
           }
@@ -223,6 +222,8 @@
           .time {
             order: 1;
             position: absolute;
+            text-align: right;
+            margin-top: 4px;
             align-self: center;
             font-family: "Roboto-Regular";
             font-size: 10px;
@@ -259,6 +260,8 @@
           }
           .time {
             order: 3;
+            text-align: left;
+            margin-top: 4px;
             right: auto;
             left: 103%;
           }
