--- a/imports/stylesheets/common.scss
+++ b/imports/stylesheets/common.scss
@@ -1,3 +1,12 @@
 .scroll {
   overflow-y: auto !important;
 }
+
+.blog main {
+  margin-top: -220px;
+  margin-bottom: 400px;
+}
+
+.blog .user-container {
+  min-height: 256px;
+}
