--- a/imports/stylesheets/pages/main/_main.scss
+++ b/imports/stylesheets/pages/main/_main.scss
@@ -192,10 +192,13 @@ main {
       }
       .content-head {
         position: relative;
-        > h3 {
+        > a.name {
           margin: 0;
           color: #656a6e;
           font-size: 16px;
+          &:hover {
+            text-decoration: none;
+          }
           span {
             font-size: 12px;
             color: #aaacad;
