--- a/imports/stylesheets/pages/main/_main.scss
+++ b/imports/stylesheets/pages/main/_main.scss
@@ -248,6 +248,15 @@ main {
     > img {
       padding: 15px;
     }
+    .poster-wrapper {
+      background: transparent;
+      time {
+        display: none;
+      }
+    }
+    .poster-border {
+      border-bottom: none;
+    }
   }
   .posts {
     margin-bottom: 15px;
