--- a/imports/stylesheets/pages/main/includes/_sideBlocks.scss
+++ b/imports/stylesheets/pages/main/includes/_sideBlocks.scss
@@ -1317,6 +1317,12 @@
       }
     }
   }
+  .current-video {
+    text-align: center;
+    > * {
+      width: 100%;
+    }
+  }
   ul {
     padding-left: 0;
     display: flex;
@@ -1326,6 +1332,7 @@
   li {
     list-style: none;
     max-width: calc(50% - 8px);
+    cursor: pointer;
     img {
       width: 100%;
     }
