--- a/imports/stylesheets/common.scss
+++ b/imports/stylesheets/common.scss
@@ -36,3 +36,16 @@ textarea:hover, textarea:focus {
     padding: 6px 12px;
   }
 }
+
+header textarea {
+  background-color: transparent;
+  border: 1px solid transparent;
+  width: 100%;
+  &:focus {
+    border-color: white;
+  }
+
+  &::-webkit-input-placeholder, &::-moz-placeholder, &:-moz-placeholder, &:-ms-input-placeholder {
+    color: white;
+  }
+}
