--- a/imports/stylesheets/pages/join/_media.scss
+++ b/imports/stylesheets/pages/join/_media.scss
@@ -8,7 +8,7 @@
   main {
     position: relative;
     background: url(/images/join-back-cover.png);
-    .container{
+    .central-container{
       display: flex;
       flex-flow: column;
       .row{
