--- a/imports/stylesheets/pages/main/_main.scss
+++ b/imports/stylesheets/pages/main/_main.scss
@@ -13,8 +13,32 @@ $user-menu-background: #eceff4;
 $user-menu-border-radius: 5px;
 $user-menu-border-color: #ddddde;
 
+[role="main"] {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  flex-direction: row;
+}
+
+.vertical-panel {
+  height: inherit;
+}
+
+#central {
+  max-width: 1100px;
+  overflow-y: auto;
+  > * {
+    width: inherit;
+    max-width: none;
+    overflow: auto;
+  }
+}
+
 main {
-  //margin-top: -220px;
+  margin-top: -220px;
   .user-block {
     padding: 0 40px;
   }
@@ -27,7 +51,7 @@ main {
   .user-container {
     border-top: 1px solid #ccc;
   }
-  .user-info {
+  .blog-info {
     margin-top: 20px;
     min-height: 100px;
     font-family: "Panton-Regular";
