--- a/imports/stylesheets/pages/main/includes/_sideBlocks.scss
+++ b/imports/stylesheets/pages/main/includes/_sideBlocks.scss
@@ -1,312 +1,139 @@
-[id*="container-add"] {
-  position: absolute;
-  height: 100vh;
-  top: 0;
-  background-color: #ecedf5;
-  width: 70px;
-  cursor: pointer;
-  &:hover {
-    background-color: darken(#ecedf5, 1%);
+aside {
+  display: flex;
+  max-width: 50vw;
+
+  &#left {
+    flex-direction: row-reverse;
   }
-  &:after {
-    content: "+";
-    font-family: "Panton-Regular";
-    font-size: 96px;
-    color: #ffffff;
-    text-align: center;
-    position: absolute;
-    top: 30%;
-    left: 0;
-    right: 0;
-  }
-  .online {
-    position: relative;
-    left: 3px;
-    display: inline-block;
-    border-radius: 50%;
-    background-color: #8dc63f;
-    height: 10px;
-    width: 10px;
-  }
-  .addon-container {
-    display: none;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    width: 410px;
-    cursor: auto;
-    z-index: 1;
-    &.addon-container-left {
-      left: 0;
-    }
-    &.addon-container-right {
-      right: 0;
-    }
-  }
-  .statusbar {
-    background: #e0e0e0;
-    text-align: right;
-    padding: 3px;
-    span {
-      cursor: pointer;
-      margin-right: 5px;
-      position: relative;
-      top: 1px;
-    }
-  }
-  .addon-content-media.messenger {
-    display: block;
-    width: 100%;
+
+  > .stripe {
     height: 100%;
-    position: relative;
-    h1 {
-      position: relative;
-      margin: 0;
-      padding: 10px 30px;
-      font-family: "Panton-Regular";
-      font-size: 16px;
-      color: #999999;
-      background-color: #eceff4;
-      .online {
-        top: -3px;
-      }
-      .icon {
-        cursor: pointer;
-        position: absolute;
-        right: 70px;
-        top: 50%;
-        transform: translateY(-50%);
-      }
-      .icon + .icon {
-        right: 20px;
-      }
-    }
-  }
-  .messenger-container {
-    display: block;
-    width: 100%;
-    height: calc(100% - 40px);
-    position: relative;
-    padding: 10px 0;
-    > ul {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      margin: 0;
-      padding: 0;
-      bottom: 90px;
-      overflow: hidden;
-      border-bottom: 1px solid #cad3df;
-      li {
-        list-style: none;
-      }
+    background-color: #ecedf5;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    &:hover {
+      background-color: darken(#ecedf5, 1%);
     }
     &:after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: 50px;
-      background: linear-gradient(to bottom, #fff 0%, rgba(255, 255, 255, 0) 100%);;
-    }
-
-    .message-container {
-      width: 100%;
-      max-width: 100%;
-      position: relative;
-      padding: 10px;
-      cursor: pointer;
-      &:after {
-        content: "";
-        display: table;
-        height: 1px;
-        width: 100%;
-      }
-      @include user-select();
-      > div {
-        cursor: auto;
-      }
-      .options {
-        display: none;
-        $background: #aaacad;
-        background-color: $background;
-        border-radius: 5px;
-        position: absolute;
-        height: 20px;
-        width: 75px;
-        text-align: center;
-        top: -22px;
-        right: 3px;
-        .arrow-down {
-          width: 0;
-          height: 0;
-          border-left: 6px solid transparent;
-          border-right: 6px solid transparent;
-          border-top: 8px solid $background;
-          position: absolute;
-          left: 50%;
-          margin-left: -6px;
-        }
-        .icon + .icon {
-          margin-left: 5px;
-          position: relative;
-          top: 1px;
-        }
-      }
-      &:hover {
-        background-color: lighten(#eceff4, 3%);
-        .chbox {
-          display: block;
-          label {
-            opacity: 0.5;
-          }
-
-        }
-      }
-      .message {
-        width: 80%;
-        display: flex;
-        position: relative;
-        float: right;
-        .avatar {
-          min-width: 55px;
-          width: 55px;
-          order: 3;
-        }
-        .text {
-          order: 2;
-          background-color: #4aa1d9;
-          border-radius: 5px;
-          position: relative;
-          margin-right: 15px;
-          color: #ffffff;
-          font-family: "Panton-Regular";
-          font-size: 12px;
-          padding: 15px;
-          @include user-select(text);
-          &:after {
-            content: "";
-            width: 0;
-            height: 0;
-            position: absolute;
-            right: -10px;
-            top: 10px;
-            border-top: 7px solid transparent;
-            border-bottom: 7px solid transparent;
-            border-left: 10px solid #4aa1d9;
-          }
-        }
-        .time {
-          order: 1;
-          position: absolute;
-          align-self: center;
-          font-family: "Roboto-Regular";
-          font-size: 10px;
-          color: #aaacad;
-          right: 103%;
-        }
-      }
-      &.active {
-        background-color: #eceff4;
-        .chbox {
-          display: block;
-        }
-      }
-      &.left {
-        .message {
-          float: left;
-        }
-        .avatar {
-          order: 1;
-        }
-        .text {
-          order: 2;
-          background-color: #eceff4;
-          margin-right: 0;
-          margin-left: 15px;
-          color: #999999;
-          &:after {
-            right: auto;
-            left: -10px;
-            top: 10px;
-            border-left: none;
-            border-right: 10px solid #eceff4;
-          }
-        }
-        .time {
-          order: 3;
-          right: auto;
-          left: 103%;
-        }
-        .chbox {
-          right: 10px;
-        }
-        .options {
-          left: 2px;
-          right: auto;
-        }
-        &.active {
-          .text {
-            background-color: #fff;
-          }
-        }
-      }
-    }
-    .chbox {
-      display: none;
-      @include user-select(none);
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      input[type="checkbox"] {
-        position: absolute;
-        left: -9999px;
-      }
-      label {
-        cursor: pointer;
-        font-weight: normal;
-        margin-bottom: 0;
-        @include size(31px);
-      }
-      input[type="checkbox"] + label {
-        background: url(/images/checkbox-big.png) 0 -31px no-repeat;
-      }
-      input[type="checkbox"]:checked + label {
-        opacity: 1;
-        background-position: 0 0;
-      }
+      margin-top: 160px;
+      content: "+";
+      font-family: "Panton-Regular", serif;
+      color: #ffffff;
     }
   }
-  .message-block {
-    background-color: #eceff4;
-    position: absolute;
-    top: calc(100% - 80px);
-    width: 100%;
-    display: block;
-    max-height: 67px;
-    height: 100%;
-    textarea {
-      background-color: #eceff4;
-    }
-    label {
-      top: 0;
-      width: 50px;
-    }
-    .controls {
-      top: 10px;
-      right: 5px;
-      bottom: 0;
-      width: auto;
-      .send {
-        display: none;
+
+  > .panel-container {
+    position: relative;
+    > .menu {
+      display: none;
+      position: absolute;
+      padding: 0;
+      background-color: white;
+      border-top: 1px solid #BCBCBC;
+      top: 160px;
+      > li {
+        list-style: none;
+        cursor: pointer;
+        width: 180px;
+        line-height: 52px;
+        vertical-align: middle;
+        padding-right: 15px;
+        padding-left: 15px;
+        color: #999999;
+        font-size: 16px;
+        border-bottom: 1px solid #BCBCBC;
+        font-family: "panton", serif;
+        &:last-child {
+          border-bottom: none;
+        }
+        &:hover {
+          background-color: #eceff4;
+          color: #0082d5;
+        }
       }
     }
   }
 }
 
+#left > .panel-container > .menu {
+  right: 0;
+  text-align: right;
+}
+
+#right > .panel-container > .menu {
+  left: 0;
+}
+
+@mixin small-stripe() {
+  .stripe {
+    width: 45px;
+    &:after {
+      font-size: 70px;
+    }
+  }
+}
+
+@media (min-width: 981px) {
+  aside > .stripe {
+    width: 70px;
+    &:after {
+      font-size: 96px;
+    }
+  }
+}
+
+@media (max-width: 980px) {
+  aside {
+    @include small-stripe()
+  }
+}
+
+aside.expand {
+  @include small-stripe();
+  .panel-container > .menu.visible {
+    display: block;
+  }
+  .panel-container {
+    min-width: 200px;
+  }
+}
+
+.panel-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.panel-block {
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.expand .panel-block {
+  flex: 1;
+  display: flex;
+}
+
+.panel-bar {
+  background-color: #e0e0e0;
+}
+
+.panel-content {
+  height: 100%;
+  flex: 1;
+}
+
 .player {
+  ul {
+    padding-left: 0;
+    li {
+      list-style: none;
+    }
+  }
+}
+
+.player.audio {
   height: 100%;
   video {
     background-size: cover;
@@ -760,7 +587,7 @@
       width: 100%;
       background-color: #000;
     }
-    .playlist-container {
+    .playlist {
       ul {
         li {
           cursor: pointer;
@@ -859,76 +686,72 @@
         }
       }
     }
-    .playlist-container {
-      ul {
-        li {
-          cursor: pointer;
-          list-style: none;
-          font-family: "Panton-Regular";
-          font-size: 12px;
-          color: #666a6d;
-          padding: 5px 10px;
-          display: table;
-          table-layout: fixed;
-          width: 100%;
-          max-width: 100%;
-          border-bottom: 1px solid #e8e8e8;
-          box-shadow: 0 1px 0 #f0f0f0;
-          > div {
-            display: table-cell;
+  }
+
+  ul {
+    li {
+      cursor: pointer;
+      list-style: none;
+      font-family: "Panton-Regular", serif;
+      font-size: 12px;
+      color: #666a6d;
+      padding: 5px 10px;
+      display: table;
+      table-layout: fixed;
+      width: 100%;
+      max-width: 100%;
+      border-bottom: 1px solid #e8e8e8;
+      box-shadow: 0 1px 0 #f0f0f0;
+      > div {
+        display: table-cell;
+        vertical-align: middle;
+      }
+      .order {
+        width: 40px;
+        padding: 0 10px;
+      }
+      .title {
+        width: 100%;
+        color: rgba(102, 106, 109, .55);
+      }
+      .more {
+        font-family: "Panton-Bold";
+        width: 15px;
+        transform: rotate(90deg);
+        position: relative;
+        font-size: 18px;
+        line-height: 10px;
+        top: -2px;
+        color: rgba(102, 106, 109, .55);
+      }
+      &:hover {
+        .title, .more {
+          color: rgba(102, 106, 109, 1);
+        }
+      }
+      &.active {
+        .order {
+          .number {
+            display: none;
+          }
+          .play {
+            display: inline-block;
+            width: 16px;
+            height: 16px;
+            border-top: 8px solid transparent;
+            border-left: 16px solid #f12a61;
+            border-bottom: 8px solid transparent;
             vertical-align: middle;
           }
-          .order {
-            width: 40px;
-            padding: 0 10px;
-          }
-          .title {
-            width: 100%;
-            color: rgba(102, 106, 109, .55);
-          }
-          .more {
-            font-family: "Panton-Bold";
-            width: 15px;
-            transform: rotate(90deg);
-            position: relative;
-            font-size: 18px;
-            line-height: 10px;
-            top: -2px;
-            color: rgba(102, 106, 109, .55);
-          }
-          &:hover {
-            .title, .more {
-              color: rgba(102, 106, 109, 1);
-            }
-          }
-          &.active {
-            .order {
-              .number {
-                display: none;
-              }
-              .play {
-                display: inline-block;
-                width: 16px;
-                height: 16px;
-                border-top: 8px solid transparent;
-                border-left: 16px solid #f12a61;
-                border-bottom: 8px solid transparent;
-                vertical-align: middle;
-              }
-            }
-            .title {
-              font-size: 16px;
-              color: #f12a61;
-            }
-          }
+        }
+        .title {
+          font-size: 16px;
+          color: #f12a61;
         }
       }
     }
   }
 
-}
-
-.video {
   .media-container {
     position: relative;
     background-color: #e0e0e0;
@@ -1233,62 +1056,56 @@
   }
 }
 
-#container-add-left {
-  left: 0;
-}
-
-#container-add-right {
-  right: 0;
-}
-
-.playlist-container {
-  .input-group {
+.input-group.search {
+  background-color: #e0e0e0;
+  > span {
+    border: none;
     background-color: #e0e0e0;
-    > span {
-      border: none;
-      background-color: #e0e0e0;
-      padding: 11px 10px;
-      span {
-        font-size: 40px;
-        font-family: "Panton-Bold", serif;
-        color: #c7c7c7;
-        line-height: 20px;
-        cursor: pointer;
-      }
-    }
-    input {
-      height: 40px;
-      border-radius: 0;
-      border: none;
-      background-color: #eceff4;
-      font-family: "Panton-Regular", serif;
-      font-size: 13px;
-      @include placeholder {
-        color: #aaacad;
-      }
+    padding: 11px 10px;
+    span {
+      font-size: 40px;
+      font-family: "Panton-Bold", serif;
+      color: #c7c7c7;
+      line-height: 20px;
+      cursor: pointer;
     }
   }
+  input {
+    height: 40px;
+    border-radius: 0;
+    border: none;
+    background-color: #eceff4;
+    font-family: "Panton-Regular", serif;
+    font-size: 13px;
+    @include placeholder {
+      color: #aaacad;
+    }
+  }
+}
+
+.player.video {
   .current-video {
     text-align: center;
     > * {
       width: 100%;
     }
   }
-  ul {
-    padding-left: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  li {
-    list-style: none;
-    max-width: calc(50% - 8px);
-    cursor: pointer;
-    img {
-      width: 100%;
+  .playlist-container {
+    ul {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+    li {
+      max-width: calc(50% - 8px);
+      cursor: pointer;
+      img {
+        width: 100%;
+      }
+    }
+    .mCSB_scrollTools {
+      right: -3px;
     }
   }
-  .mCSB_scrollTools {
-    right: -3px;
-  }
 }
+
